Move to second activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
         <item>Real Madrid FC</item>
         <item>Bayern Munchen FC</item>
         <item>Manchester City FC</item>
+        <item>Manchester United FC</item>
         <item>Chelsea FC</item>
         <item>AC Milan FC</item>
         <item>Arsenal FC</item>
